# D9.11_homework

./: README.md  pyproject.toml  pytest.ini  requirements.txt
app/: models.py  serializers.py
app/migrations/: 0001_initial.py  0002_auto_20210420_1854.py  0003_auto_20210427_2041.py
blog/: settings.py  urls.py  wsgi.py
blog/app/: admin.py  models.py  serializers.py  urls.py  views.py
blog/blog/: settings.py  urls.py
blog/fixture/: fixture.json
blog/tests/: conftest.py  test_app.py
fixture/: test.json
tests/: test_app.py
