[tool.poetry]
name = "d9.11_homework"
version = "0.1.0"
description = ""
authors = ["azat715 <azat715@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
djangorestframework = "^3.12.4"
pytest-django = "^4.2.0"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
